# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: cornell-box.json  cornell-box.mtl  triangle.json
includes/: camera.hh  color.hh  image.hh  json-serializers.hh  material.hh  printers.hh  ray.hh  ray.hxx  scene.hh  triangle.hh  utils.hh  vec.hh
src/: camera.cc  image.cc  json-serializers.cc  main.cc  ray.cc  scene.cc  vec.cc
